Amélioration de la qualité du code